# MENTOR

./: .gitignore  AGENTS.md  DEVELOPMENT_GUIDE.md  MENTOR.sln  Program.cs  README.md  Specification.md  mcp_doc_extract.py  mcp_doc_extract.txt  mentor-api.out  package-lock.json
.claude/: settings.local.json
.codacy/: codacy.yaml
.github/agents/: LearningRunnerAgent.agent.md  MentorOrchestrator.agent.md  ProfileAgent.agent.md  ReportInterpreter.agent.md  TrainerAgent.agent.md
.github/instructions/: codacy.instructions.md
.github/mcp/: report-interpreter.mcp.json
MentorMlApi/: MentorMlApi.http  Program.cs  README.md  appsettings.Development.json  appsettings.json
MentorMlApi/Models/: MlAgentsProcessStatus.cs  (+2 more)
MentorMlUi/: README.md  index.html  package-lock.json  package.json  tsconfig.json
mentor-api/: .gitignore  MentorApi.csproj  Program.cs  Program_excerpt.tmp  README.md  TESTING.md  mentor-settings.example.json
mentor-cli/: .gitignore  AGENTS.md  MentorTrainingRunner.csproj  Program.cs  README.md  ReportInterpreterOptions.cs  ReportInterpreterRunner.cs  ReportOptions.cs  Training-ML-Agents.md  TrainingOptions.cs  TrainingReportGenerator.cs  TrainingSessionRunner.cs  UsageText.cs
mentor-mcp/: .gitignore  package-lock.json  package.json  tsconfig.json
mentor-py-api/: .gitignore  README.md  __main__.py  mentor.yml  pyproject.toml
mentor-py-api/mentor_py_api/: app.py  cli_args.py  models.py  options.py  report_generator.py  report_interpreter.py  run_store.py  training_runner.py  usage_text.py
mentor-webapp/: README.md  index.html
(+136 files in other folders)
