[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentor-py-api"
version = "0.1.0"
description = "Python port of Mentor API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.23.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["ruff"]
